# switcher-rust

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  config.rs  control.rs  device.rs  discovery.rs  lib.rs  main.rs  pairing.rs  utils.rs
tests/: integration_tests.rs
