[package]
name = "switcher-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "switcher-rust"
path = "src/main.rs"

[lib]
name = "switcher_rust"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
crc = "3.0"
